2005-01-24 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/Report.py: Fix adding styles and calling doc.init().
	* src/BaseDoc.py: Restructure header; Replace tabs with spaces.
	* src/plugins/AncestorChart.py (calc): Remove doc.init() call.
	* src/plugins/AncestorChart2.py (calc): Remove doc.init() call.
	* src/plugins/Ancestors.py (define_table_styles): Add method.
	* src/plugins/FamilyGroup.py (define_table_styles): Add method.
	* src/plugins/FanChart.py (define_graphics_styles): Add method.
	* src/plugins/FtmStyleDescendants.py (define_table_styles):
	Add method.
	* src/plugins/FtmStyleAncestors.py: Minor cleanups
	* src/plugins/IndivComplete.py (define_table_styles): Add method.
	* src/plugins/IndivSummary.py (define_table_styles): Add method.
	* src/plugins/Partition.py: Remove from CVS.
	* src/plugins/StatisticsChart.py (define_graphics_styles):
	Add method.
	* src/plugins/TimeLine.py (define_graphics_styles): Add method.
	* src/plugins/DesGraph.py: Add styles before initializing doc.

	* src/StyleEditor.py (draw,save_paragraph): Swap SERIF and SANS_SERIF.

	* src/Report.py (BareReportDialog.init_interface): Set up buttons
	with proper response values; (report): Ignore everything except
	RESPONSE_OK.
	* src/plugins/BookReport.py (BookReportSelector.on_setup_clicked,
	BookReportDialog.__init__): Ignore everything except RESPONSE_OK.

	* src/docgen/LPRDoc.py (LPRDoc.draw_box): Shadow support.

2005-01-23  Don Allingham  <dallingham@users.sourceforge.net>
	* src/BaseDoc.py: don't check for init on table or cell addition
	* src/Report.py: Call doc.init() before write_report

2005-01-23 Eero Tamminen <eerot@sf>
	* src/plugins/StatisticsChart.py:
	  - Complete refactoring of Extract class. There are now separate
	    methods for Gramp type extraction and data extraction from types
	    + db is stored to self.db.  This makes code much more flexible
	  - Added charts for person age, death and birth places, death cause