@@ -95,6 +95,7 @@ GCONF_CONFIG_SOURCE=`gconftool-2 --get-default-source` \
 /usr/bin/update-desktop-database %{_datadir}/applications &> /dev/null
 /usr/bin/update-mime-database %{_datadir}/mime &> /dev/null
 if which scrollkeeper-update>/dev/null 2>&1; then scrollkeeper-update; fi
+pkill gconfd
 
 %postun
 if which scrollkeeper-update>/dev/null 2>&1; then scrollkeeper-update; fi
